--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-native": "0.72.10",
     "react-native-collapsible": "^1.6.1",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "^1.10.3",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-webview": "^13.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
