--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-native-maps": "^1.10.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-webview": "^13.8.1"
+    "react-native-webview": "^13.8.1",
+    "expo-camera": "~13.4.4",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
